<?xml version="1.0" encoding="utf-8"?>
<!-- Declare the layout type as Constraint Layout -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Layout attributes for the Open Camera TextView-->
    <TextView
        android:id="@+id/OpenCameraTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#c1000a"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:onClick="capturePhoto"
        android:text="@string/open_camera"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ViewPictureTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Layout attributes for the Open Gallery TextView-->
    <TextView
        android:id="@+id/ViewPictureTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#cc5216"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:onClick="openGallery"
        android:text="@string/view_picture"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/CallAnActivityTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OpenCameraTextView" />

    <!-- Layout attributes for the Call Explicit Intent Activity TextView-->
    <TextView
        android:id="@+id/CallAnActivityTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#ffd83a"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:onClick="callAnActivity"
        android:text="@string/call_activity"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ActivityContentsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewPictureTextView" />

    <!-- Layout attributes for the Explicit Intent Activity returned values TextView-->
    <TextView
        android:id="@+id/ActivityContentsTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#388e3c"
        android:ems="10"
        android:gravity="start"
        android:inputType="none"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/SendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CallAnActivityTextView" />

    <!-- Layout attributes for the Send Email Button-->
    <Button
        android:id="@+id/SendButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="#004dc1"
        android:onClick="sendEmail"
        android:text="@string/button_send"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityContentsTextView" />

</android.support.constraint.ConstraintLayout>